--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
         "dev": "nodemon ./bin/www"
     },
     "dependencies": {
+        "@handlebars/allow-prototype-access": "^1.0.3",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "express": "~4.16.1",
         "express-handlebars": "^4.0.4",
+        "handlebars": "^4.7.6",
         "hbs": "~4.0.4",
         "http-errors": "~1.6.3",
-        "morgan": "~1.9.1"
+        "morgan": "~1.9.1",
+        "uuid": "^8.0.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
