--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "handlebars": "^4.7.6",
         "hbs": "~4.0.4",
         "http-errors": "~1.6.3",
+        "mongoose": "^5.9.15",
         "morgan": "~1.9.1",
         "uuid": "^8.0.0"
     },
