--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "debug": "~2.6.9",
         "express": "~4.16.1",
         "express-handlebars": "^4.0.4",
+        "express-session": "^1.17.1",
         "handlebars": "^4.7.6",
         "hbs": "~4.0.4",
         "http-errors": "~1.6.3",
