--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@handlebars/allow-prototype-access": "^1.0.3",
+        "connect-mongodb-session": "^2.3.2",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "express": "~4.16.1",
